<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:orientation="vertical"
    tools:context=".WelcomeActivity"
    >

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/welcome_icon"
        android:src="@drawable/ic_baseline_hiking_48"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_icon"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="?attr/colorControlNormal"
            android:textSize="30sp"
            android:textAlignment="center"
            android:letterSpacing="0.2"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/colorControlNormal"
            android:textSize="36sp"
            android:textAlignment="center"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description"
            android:textColor="?attr/colorControlNormal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:letterSpacing="0.2"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:orientation="vertical">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="25dp"
                android:padding="12dp"
                android:text="@string/sign_in"
                android:textSize="16sp"
                />



        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
</ScrollView>