<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_login_24"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="?attr/colorControlNormal"
            android:textSize="36sp"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorControlNormal"
                android:padding="16dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner"
                android:textColor="?attr/colorControlNormal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textSize="16sp"

                />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:indeterminateTint="?attr/colorControlNormal"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorControlNormal"
                android:text="@string/dont_have_account"
                android:textSize="17sp"/>

            <Space
                android:layout_width="5sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/register_text_view_btn"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorControlNormal"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/sign_in"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/reset_password_text_view_btn"
                android:layout_width="wrap_content"
                android:textColor="?colorControlNormal"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/forgot_password"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
</ScrollView>