<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        tools:context=".ResetPasswordActivity"
        >

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_lock_24"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_icon"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="?attr/colorControlNormal"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:textColor="?attr/colorControlNormal"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textSize="20sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_btn"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="12dp"
                    android:padding="12dp"
                    android:text="@string/confirm"
                    android:textSize="16sp"
                    />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="24dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:indeterminateTint="?colorControlNormal"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>