<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical"
            tools:context=".SuperSettingsActivity"
            >

            <ImageView
                android:id="@+id/login_icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_baseline_settings_24"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_icon"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/logout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:text="@string/logout"
                        android:textSize="16sp" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="24dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:indeterminateTint="?attr/colorControlNormal"
                        android:visibility="gone" />


                </LinearLayout>

            </LinearLayout>





        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/bottom_navigation_settings">

            <TextView
                android:layout_width="150dp"
                android:textSize="20sp"
                android:textColor="?colorControlNormal"
                android:layout_height="wrap_content"
                android:text="@string/contactUs"
                android:layout_margin="20dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_margin="20dp"
                android:id="@+id/emailButton"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:elevation="0dp"
                app:elevation="0dp"
                android:src="@drawable/ic_baseline_email_24"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_margin="20dp"
                android:id="@+id/callButton"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:elevation="0dp"
                app:elevation="0dp"
                android:src="@drawable/ic_baseline_call_24"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>




</ScrollView>